fixing up text overflow

--- a/styles.css
+++ b/styles.css
@@ -88,7 +88,7 @@
 }
 
 .character-card-l {
-    width: 100%;
+    width: 600px;
     height: 220px;
     background: rgb(60, 62, 68);
     border-radius: 0.5rem;
@@ -112,7 +112,10 @@
     display: flex;
     flex: 3 1 0%;
     flex-direction: column; 
-    padding-left: 15px;
+    margin-left: 15px;
+    /* padding-right: 15px; */
+    /* background-color: red; */
+    width: 100%;
 }
 .sub-section1, a {
     text-decoration: none;
@@ -150,12 +153,21 @@ background: red;
     width: 70%;
     height: 20%;
     padding-top: 15px;
+    overflow: hidden;
+    white-space: nowrap;
 }
 .sub-section2, .sub-section3 {
-    padding-top: 10px;
     display: flex;
     flex-direction: column;
     font-size: 20px;
     padding-top: 15px;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: clip; 
+   
 }
 
+.sub-section3 {
+    width: 350px;
+    margin-right: 15px;
+}
